--- a/styles.css
+++ b/styles.css
@@ -13,23 +13,21 @@ h2 {
 .bt {
   background: white;
   border: none;
-  width: 100%; /* Adjusted width */
-  max-width: 10em; /* Maximum width */
+  width: 3.5em;
   padding: 1em;
-  font-size: 1em;
-  margin: 0.2em auto; /* Centered margin */
+  font-size: 1em; /* Relative font size */
+  margin: 0 .5em; /* Shorthand for margin-left and margin-right */
   font-family: 'Roboto Mono', monospace;
 }
 
 .bt:hover {
-  opacity: 0.7; /* Increased opacity */
+  opacity: 0.3;
 }
 
 /* Input styles */
 .in {
-  width: 100%;
-  max-width: 20em; /* Maximum width */
-  padding: 0.625em;
+  width: 70%;
+  padding: 0.625em; /* Adjusted padding */
   border: none;
   font-size: 1em;
   text-align: right;
@@ -38,12 +36,10 @@ h2 {
 
 /* Horizontal line styles */
 hr {
-  margin: 0.063em;
+  margin: 0.063em; /* Adjusted margin */
   margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  max-width: 30em; /* Maximum width */
+  margin-left: 5px;
+  width: 71%;
   border-color: grey;
   opacity: 0.2;
   border-width: thin;
@@ -59,50 +55,4 @@ hr {
   background-color: #e37739;
   border-radius: 50px;
   color: white;
-}
-
-/* Media Queries for responsiveness */
-@media screen and (min-width: 480px) {
-  /* Adjust styles for small screens (e.g., mobile phones) */
-  .bt {
-    max-width: 8em;
-  }
-  
-  .in {
-    max-width: 18em;
-  }
-  
-  hr {
-    max-width: 25em;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  /* Adjust styles for tablets and larger screens */
-  .bt {
-    max-width: 12em;
-  }
-  
-  .in {
-    max-width: 25em;
-  }
-  
-  hr {
-    max-width: 35em;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  /* Adjust styles for desktop screens */
-  .bt {
-    max-width: 15em;
-  }
-  
-  .in {
-    max-width: 30em;
-  }
-  
-  hr {
-    max-width: 40em;
-  }
 }
